kubernetes/backend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: backend-service
  namespace: job-board
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 3001
    targetPort: 3001
    nodePort: 30001
    protocol: TCP
    name: http
