kubernetes/frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service
  namespace: job-board
spec: 
  type: NodePort
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
    name: http
