kubernetes/postgres-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: postgres-service
  namespace: job-board
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  ClusterIP: None # Headless service for statefulset
